// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendIpfs should error if wrong mnemonic 1`] = `
<div>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzpjYC coERBU"
    >
      <div
        class="px-4 sm:px-6 lg:px-10"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="sc-fznxsB gUNIFm"
            >
              <svg
                width="40"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex h-20 mr-auto md:h-24"
          >
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="overflow-hidden rounded-lg"
              >
                <button
                  class="sc-AxjAm goVygI text-theme-primary-300 hover:text-theme-primary-700 hover:bg-theme-primary-50"
                  color="primary"
                  data-testid="navbar__buttons--notifications"
                  type="button"
                >
                  <div
                    class="sc-AxiKw fFXzuz p-1"
                    height="22"
                    width="22"
                  >
                    <svg>
                      notification.svg
                    </svg>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxjAm goVygI text-theme-primary-300 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--send"
                type="button"
              >
                <div
                  class="sc-AxiKw fFXzuz p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxjAm goVygI text-theme-primary-300 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="sc-AxiKw fFXzuz p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    receive.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 mr-4"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-medium text-theme-neutral"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-neutral-dark"
              >
                <span
                  data-testid="Amount"
                >
                  91.43089801 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="ml-4 cursor-pointer"
                data-testid="navbar__useractions"
              >
                <div
                  class="sc-AxgMl eqWWwc -mr-2 border-theme-primary-contrast"
                >
                  <span
                    class="text-theme-neutral-dark"
                  >
                    <div
                      class="sc-AxiKw dzBdqj"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        btc.svg
                      </svg>
                    </div>
                  </span>
                </div>
                <div
                  class="relative inline-flex items-center justify-center align-middle rounded-full"
                  data-testid="navbar__user--avatar"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background"
                    >
                      JO
                    </span>
                  </div>
                  <span
                    class="sc-AxhUy kTPsmA flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                  >
                    <div
                      class="sc-AxiKw ksjdLL"
                      height="10"
                      width="10"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                    <span />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex items-center space-x-2 container py-5 mx-auto font-semibold px-14 text-theme-neutral-dark"
      data-testid="breadcrumbs__wrapper"
    >
      <div
        class="sc-AxiKw bGpsrC"
        height="10"
        width="19"
      >
        <svg>
          arrow-back.svg
        </svg>
      </div>
      <div
        class="space-x-2"
      >
        <a
          class="text-theme-neutral-dark"
          href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
        >
          <span>
            Go back to Portfolio
          </span>
        </a>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 "
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 bryymu flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <form
            class="max-w-xl mx-auto"
            data-testid="Form"
          >
            <div>
              <ul
                class="sc-fznWqX bcUgwz"
              >
                <li
                  class="sc-fznJRM fanqcP"
                />
                <li
                  class="sc-fznJRM fanqcP"
                />
                <li
                  class="sc-fznJRM fanqcP"
                />
                <li
                  class="sc-fznJRM fiwUGS"
                />
              </ul>
              <div
                class="mt-8"
              >
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <div
                    data-testid="AuthenticationStep"
                  >
                    <div>
                      <h1
                        class="mb-0"
                      >
                        Authenticate
                      </h1>
                      <div
                        class="text-theme-neutral-dark"
                      >
                        Enter your twelve word mnemonic to authenticate the transaction.
                      </div>
                      <div
                        class="mt-8"
                      >
                        <fieldset
                          class="sc-AxirZ kMHTdH flex flex-col space-y-2"
                        >
                          <label
                            class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-dark"
                            data-testid="FormLabel"
                            for="mnemonic"
                          >
                            Mnemonic
                            <div
                              class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                              data-testid="FormLabel__required"
                            />
                          </label>
                          <div
                            class="sc-fzqNJr gmzgI max-w-20"
                            data-testid="InputPassword"
                          >
                            <input
                              aria-invalid="true"
                              class="sc-fznKkj lbGKPD overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pr-12"
                              data-testid="AuthenticationStep__mnemonic"
                              name="mnemonic"
                              type="password"
                            />
                            <div
                              class="sc-fznZeY sc-fzqBZW iAaafO my-px mr-4"
                            >
                              <button
                                class="flex items-center justify-center w-full h-full text-2xl focus:outline-none text-theme-primary-400"
                                data-testid="InputPassword__toggle"
                                type="button"
                              >
                                <div
                                  class="sc-AxiKw dzBdqj"
                                  height="1em"
                                  width="1em"
                                >
                                  <svg>
                                    eye.svg
                                  </svg>
                                </div>
                              </button>
                            </div>
                          </div>
                          <p
                            class="text-sm text-theme-danger"
                          >
                            Invalid Mnemonic
                          </p>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex justify-end mt-10 space-x-2"
                >
                  <button
                    class="sc-AxjAm fPpool"
                    color="primary"
                    data-testid="SendIpfs__button--back"
                    type="button"
                  >
                    Back
                  </button>
                  <button
                    class="sc-AxjAm kbZyZT"
                    color="primary"
                    data-testid="SendIpfs__button--submit"
                    disabled=""
                    type="submit"
                  >
                    Sign & Continue
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SendIpfs should navigate between steps 1`] = `
<div>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzpjYC coERBU"
    >
      <div
        class="px-4 sm:px-6 lg:px-10"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="sc-fznxsB gUNIFm"
            >
              <svg
                width="40"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex h-20 mr-auto md:h-24"
          >
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="overflow-hidden rounded-lg"
              >
                <button
                  class="sc-AxjAm goVygI text-theme-primary-300 hover:text-theme-primary-700 hover:bg-theme-primary-50"
                  color="primary"
                  data-testid="navbar__buttons--notifications"
                  type="button"
                >
                  <div
                    class="sc-AxiKw fFXzuz p-1"
                    height="22"
                    width="22"
                  >
                    <svg>
                      notification.svg
                    </svg>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxjAm goVygI text-theme-primary-300 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--send"
                type="button"
              >
                <div
                  class="sc-AxiKw fFXzuz p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxjAm goVygI text-theme-primary-300 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="sc-AxiKw fFXzuz p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    receive.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 mr-4"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-medium text-theme-neutral"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-neutral-dark"
              >
                <span
                  data-testid="Amount"
                >
                  91.43089801 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="ml-4 cursor-pointer"
                data-testid="navbar__useractions"
              >
                <div
                  class="sc-AxgMl eqWWwc -mr-2 border-theme-primary-contrast"
                >
                  <span
                    class="text-theme-neutral-dark"
                  >
                    <div
                      class="sc-AxiKw dzBdqj"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        btc.svg
                      </svg>
                    </div>
                  </span>
                </div>
                <div
                  class="relative inline-flex items-center justify-center align-middle rounded-full"
                  data-testid="navbar__user--avatar"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background"
                    >
                      JO
                    </span>
                  </div>
                  <span
                    class="sc-AxhUy kTPsmA flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                  >
                    <div
                      class="sc-AxiKw ksjdLL"
                      height="10"
                      width="10"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                    <span />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex items-center space-x-2 container py-5 mx-auto font-semibold px-14 text-theme-neutral-dark"
      data-testid="breadcrumbs__wrapper"
    >
      <div
        class="sc-AxiKw bGpsrC"
        height="10"
        width="19"
      >
        <svg>
          arrow-back.svg
        </svg>
      </div>
      <div
        class="space-x-2"
      >
        <a
          class="text-theme-neutral-dark"
          href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
        >
          <span>
            Go back to Portfolio
          </span>
        </a>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 "
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 bryymu flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <form
            class="max-w-xl mx-auto"
            data-testid="Form"
          >
            <div>
              <ul
                class="sc-fznWqX bcUgwz"
              >
                <li
                  class="sc-fznJRM fanqcP"
                />
                <li
                  class="sc-fznJRM fanqcP"
                />
                <li
                  class="sc-fznJRM fanqcP"
                />
                <li
                  class="sc-fznJRM fanqcP"
                />
              </ul>
              <div
                class="mt-8"
              >
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <section
                    class="space-y-8"
                    data-testid="TransactionSuccessful"
                  >
                    <div>
                      <h1
                        class="mb-0"
                      >
                        Transaction Sent
                      </h1>
                      <div
                        class="grid grid-flow-row gap-2"
                      >
                        <div
                          class="w-full my-10"
                        >
                          <svg
                            class="w-full"
                          >
                            transaction_successful.svg
                          </svg>
                        </div>
                        <p
                          class="mb-4 text-theme-neutral-dark"
                        >
                          Your transaction was successfully sent. Please monitor the blockchain to ensure your transaction is confirmed and processed. The following is relevant information for your transaction:
                        </p>
                        <div
                          class="flex items-center py-6 true "
                          data-testid="TransactionDetail"
                        >
                          <div
                            class="flex-1 space-y-2"
                          >
                            <div
                              class="text-sm font-semibold text-theme-neutral"
                            >
                              ID
                            </div>
                            <div
                              class="font-semibold"
                            >
                              <div
                                class="flex items-center"
                              >
                                <div
                                  class="inline-block truncate align-middle"
                                >
                                  <span
                                    class="sc-fzpans kkFAbe text-theme-primary font-semibold text-base"
                                    data-testid="address__wallet-address"
                                  >
                                    1e9b975eff66a7…6db3d69131067e
                                  </span>
                                </div>
                                <span
                                  class="ml-5"
                                >
                                  <div
                                    class="inline-block cursor-pointer"
                                    data-testid="clipboard__wrapper"
                                  >
                                    <div
                                      class="text-theme-primary-300"
                                    >
                                      <div
                                        class="sc-AxiKw dzBdqj"
                                        height="1em"
                                        width="1em"
                                      >
                                        <svg>
                                          copy.svg
                                        </svg>
                                      </div>
                                    </div>
                                  </div>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
                          data-testid="TransactionDetail"
                        >
                          <div
                            class="flex-1 space-y-2"
                          >
                            <div
                              class="text-sm font-semibold text-theme-neutral"
                            >
                              Network
                            </div>
                            <div
                              class="font-semibold"
                            >
                              ARK ARK Devnet
                            </div>
                          </div>
                          <div
                            class="ml-1 text-theme-danger"
                          >
                            <div
                              class="sc-AxgMl eqWWwc bg-theme-background border-theme-danger-light"
                            >
                              <div
                                class="sc-AxiKw dklFyP"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  ark.svg
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
                          data-testid="TransactionDetail"
                        >
                          <div
                            class="flex-1 space-y-2"
                          >
                            <div
                              class="font-semibold"
                            >
                              <div
                                class="mb-2 text-sm font-semibold text-theme-neutral"
                              >
                                <span
                                  class="mr-1"
                                >
                                  Sender
                                </span>
                                <div
                                  class="sc-fzoLsD jBzTcb"
                                  color="warning"
                                >
                                  <span
                                    class="text-sm"
                                  >
                                    Your address
                                  </span>
                                </div>
                              </div>
                              <div
                                class="inline-block truncate align-middle"
                              >
                                <span
                                  class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                                  data-testid="address__wallet-name"
                                >
                                  ARK Wallet 1
                                </span>
                                <span
                                  class="sc-fzpans kkFAbe text-theme-neutral-light font-semibold text-base"
                                  data-testid="address__wallet-address"
                                >
                                  D5sRKW…cvJtwb
                                </span>
                              </div>
                            </div>
                          </div>
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full"
                            >
                              <img
                                alt="AUexKjGtgsSpVzPLs6jNMM6vJ6znEVTQWK"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(255, 87, 34)\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"60\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"50\\" fill=\\"rgb(63, 81, 181)\\"/></svg>"
                                title="AUexKjGtgsSpVzPLs6jNMM6vJ6znEVTQWK"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </section>
                </div>
                <div
                  class="flex justify-end mt-10 space-x-2"
                >
                  <button
                    class="sc-AxjAm fPpool block"
                    color="primary"
                    data-testid="SendIpfs__button--back-to-wallet"
                    type="button"
                  >
                    Back to Wallet
                  </button>
                  <button
                    class="sc-AxjAm fPpool space-x-2"
                    color="primary"
                    data-testid="SendIpfs__button--copy"
                    type="button"
                  >
                    <div
                      class="sc-AxiKw dzBdqj"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        copy.svg
                      </svg>
                    </div>
                    <span>
                      Copy
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SendIpfs should navigate between steps 2`] = `<div />`;

exports[`SendIpfs should render 1st step 1`] = `
<DocumentFragment>
  <section
    data-testid="SendIpfs__step--first"
  >
    <div>
      <h1
        class="mb-0"
      >
        IPFS
      </h1>
      <div
        class="text-theme-neutral-dark"
      >
        Store an IPFS hash on the network.
      </div>
    </div>
    <div
      class="mt-8"
    >
      <div
        class="space-y-8 SendTransactionForm"
      >
        <fieldset
          class="sc-AxirZ izhStr relative"
        >
          <div
            class="mb-2"
          >
            <label
              class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-dark"
              data-testid="FormLabel"
              for="network"
            >
              Network
              <div
                class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
          </div>
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="SendTransactionForm__network-menu"
            data-testid="SelectNetwork"
            role="combobox"
          >
            <label
              for="SendTransactionForm__network-input"
              id="SendTransactionForm__network-label"
            />
            <div
              class="sc-fzqNJr gmzgI"
              data-testid="SelectNetworkInput"
            >
              <div
                class="sc-fznZeY sc-fzokOt jWugcU px-4"
              >
                <div
                  class="sc-AxgMl eLFBRi border-theme-neutral-light text-theme-neutral"
                  data-testid="SelectNetworkInput__network"
                />
              </div>
              <input
                aria-autocomplete="list"
                aria-controls="SendTransactionForm__network-menu"
                aria-labelledby="SendTransactionForm__network-label"
                autocomplete="off"
                class="sc-fznKkj lbGKPD overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pl-15"
                data-testid="SelectNetworkInput__input"
                id="SendTransactionForm__network-input"
                placeholder="Enter a network name"
                value=""
              />
            </div>
          </div>
          <ul
            aria-labelledby="SendTransactionForm__network-label"
            class="grid grid-cols-6 gap-6 mt-6"
            id="SendTransactionForm__network-menu"
            role="listbox"
          />
        </fieldset>
        <fieldset
          class="sc-AxirZ izhStr relative"
        >
          <div
            class="mb-2"
          >
            <label
              class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-dark"
              data-testid="FormLabel"
              for="senderAddress"
            >
              Sender
              <div
                class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
          </div>
          <div
            data-testid="sender-address"
          >
            <div>
              <button
                class="sc-fzoyTs bPtMIB SelectAddress  "
                data-testid="SelectAddress__wrapper"
                type="button"
              >
                <div
                  class="sc-AxgMl eLFBRi mx-4 bg-theme-neutral-200 border-theme-neutral-200"
                />
                <div
                  class="inline-block truncate align-middle"
                />
                <div
                  class="absolute flex items-center space-x-3 right-4"
                >
                  <div
                    class="sc-AxiKw dklFyP"
                    height="20"
                    width="20"
                  >
                    <svg>
                      user.svg
                    </svg>
                  </div>
                </div>
              </button>
              <input
                class="sc-fznKkj lbGKPD overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 hidden"
                data-testid="SelectAddress__input"
                name="senderAddress"
                readonly=""
                type="text"
                value=""
              />
            </div>
          </div>
        </fieldset>
        <fieldset
          class="sc-AxirZ izhStr relative mt-1"
        >
          <div
            class="mb-2"
          >
            <label
              class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-dark"
              data-testid="FormLabel"
              for="hash"
            >
              IPFS Hash
              <div
                class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
          </div>
          <div
            class="sc-fzqNJr gmzgI"
          >
            <input
              class="sc-fznKkj lbGKPD overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pr-20"
              data-testid="Input__hash"
              name="hash"
              placeholder=" "
              type="text"
              value=""
            />
          </div>
        </fieldset>
        <fieldset
          class="sc-AxirZ izhStr flex flex-col space-y-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-dark"
            data-testid="FormLabel"
            for="fee"
          >
            Transaction Fee
            <div
              class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div
            class="flex space-x-2"
            data-testid="InputFee"
          >
            <div
              class="flex-1"
            >
              <div
                class="sc-fzqNJr gmzgI"
              >
                <input
                  class="sc-fznKkj lbGKPD overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 "
                  data-testid="InputCurrency"
                  name="fee"
                  type="text"
                  value="0"
                />
                <div
                  class="absolute bottom-0 w-full px-1"
                >
                  <div
                    class="flex flex-wrap justify-center"
                    data-testid="Range"
                  >
                    <div
                      class="sc-fzoyAV cgfxbu"
                      data-testid="Range__track"
                      style="transform: scale(1); cursor: pointer;"
                    >
                      <div
                        class="sc-fzoLag kxUFqT"
                        data-testid="Range__track__filled"
                      >
                        <div
                          aria-valuemax="2e-8"
                          aria-valuemin="0"
                          aria-valuenow="0"
                          class="sc-fzoXzr eykVSb"
                          data-testid="Range__thumb"
                          draggable="false"
                          role="slider"
                          style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                          tabindex="0"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                class="inline-flex items-center flex-shrink-0 overflow-hidden border rounded border-theme-neutral-300"
                data-testid="SelectionBar"
                role="radiogroup"
              >
                <button
                  aria-checked="false"
                  class="sc-fzoNJl gCmvhq relative px-5 transition-colors duration-300 border-transparent focus:outline-none border-b-3"
                  data-testid="SelectionBarOption"
                  role="radio"
                  type="button"
                >
                  Min
                </button>
                <button
                  aria-checked="false"
                  class="sc-fzoNJl gCmvhq relative px-5 transition-colors duration-300 border-transparent focus:outline-none border-b-3"
                  data-testid="SelectionBarOption"
                  role="radio"
                  type="button"
                >
                  Average
                </button>
                <button
                  aria-checked="false"
                  class="sc-fzoNJl gCmvhq relative px-5 transition-colors duration-300 border-transparent focus:outline-none border-b-3"
                  data-testid="SelectionBarOption"
                  role="radio"
                  type="button"
                >
                  Max
                </button>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`SendIpfs should render 2nd step 1`] = `
<DocumentFragment>
  <section
    data-testid="SendIpfs__step--second"
  >
    <h1
      class="mb-0"
    >
      Transaction Review
    </h1>
    <div
      class="text-theme-neutral-dark"
    >
      Check the information again before voting
    </div>
    <div
      class="grid grid-flow-row gap-2 mt-4"
    >
      <div
        class="flex items-center py-6 true "
        data-testid="TransactionDetail"
      >
        <div
          class="flex-1 space-y-2"
        >
          <div
            class="text-sm font-semibold text-theme-neutral"
          >
            Network
          </div>
          <div
            class="font-semibold"
          >
            <div
              class="flex-auto font-semibold truncate text-md text-theme-neutral-800 max-w-24"
            >
              ARK Devnet
            </div>
          </div>
        </div>
        <div
          class="ml-1 text-theme-danger"
        >
          <div
            class="sc-AxgMl eqWWwc bg-theme-background border-theme-danger-light"
          >
            <div
              class="sc-AxiKw dklFyP"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
        data-testid="TransactionDetail"
      >
        <div
          class="flex-1 space-y-2"
        >
          <div
            class="font-semibold"
          >
            <div
              class="mb-2 font-semibold text-theme-neutral"
            >
              <span
                class="mr-1 text-sm"
              >
                Sender
              </span>
              <div
                class="sc-fzoLsD jBzTcb"
                color="warning"
              >
                <span
                  class="text-sm"
                >
                  Your address
                </span>
              </div>
            </div>
            <div
              class="inline-block truncate align-middle"
            >
              <span
                class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                data-testid="address__wallet-name"
              >
                ARK Wallet 1
              </span>
              <span
                class="sc-fzpans kkFAbe text-theme-neutral-light font-semibold text-base"
                data-testid="address__wallet-address"
              >
                D8rr7B…s6YUYD
              </span>
            </div>
          </div>
        </div>
        <div
          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
          data-testid="Avatar"
        >
          <div
            class="w-full h-full"
          >
            <img
              alt="ABUexKjGtgsSpVzPLs6jNMM6vJ6znEVTQWK"
              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(205, 220, 57)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"60\\" fill=\\"rgb(103, 58, 183)\\"/><circle r=\\"60\\" cx=\\"40\\" cy=\\"40\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
              title="ABUexKjGtgsSpVzPLs6jNMM6vJ6znEVTQWK"
            />
          </div>
        </div>
      </div>
      <div
        class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 pt-6"
        data-testid="TransactionDetail"
      >
        <div
          class="flex-1 space-y-2"
        >
          <div
            class="text-sm font-semibold text-theme-neutral"
          >
            IPFS Hash
          </div>
          <div
            class="font-semibold"
          >
            QmXoypizjW3WknFiJnKLwHCnL72vedxjQkDDP1mXWo6uco
          </div>
        </div>
        <div
          class="mx-2"
        >
          <div
            class="sc-AxiKw gZwZcb"
            height="32"
            width="32"
          >
            <svg>
              ipfs.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="mt-2"
      >
        <div
          class="border rounded-lg border-theme-neutral-300"
        >
          <div
            class="relative p-3"
          >
            <div
              class="grid grid-cols-2 divide-x divide-gray-400"
            >
              <div
                class="flex flex-col justify-center px-6 py-5"
              >
                <span
                  class="text-sm text-theme-neutral"
                >
                  Transaction(s) Amount
                </span>
                <span
                  class="mt-2 font-semibold"
                  data-testid="total-amount-box__transaction-amount"
                >
                  0 ARK
                </span>
              </div>
              <div
                class="flex flex-col justify-center px-6 py-5 text-right"
              >
                <span
                  class="text-sm text-theme-neutral"
                >
                  Transaction fee
                </span>
                <span
                  class="mt-2 text-lg font-semibold"
                  data-testid="total-amount-box__transaction-fee"
                >
                  0.1 ARK
                </span>
              </div>
            </div>
            <div
              class="absolute top-0 bottom-0 left-0 right-0 flex items-center justify-center h-full text-center"
            >
              <div
                class="px-1 py-2 bg-white"
              >
                <div
                  class="sc-AxiKw eDCpIH"
                  height="15"
                  width="15"
                >
                  <svg>
                    plus.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex flex-col items-center border-t rounded-b-lg border-theme-neutral-300 justfiy-center py-7 bg-theme-neutral-contrast"
          >
            <span
              class="text-sm text-theme-neutral"
            >
              Total Amount
            </span>
            <span
              class="text-2xl font-bold"
              data-testid="total-amount-box__total"
            >
              0.1 ARK
            </span>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`SendIpfs should render 4th step 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="TransactionSuccessful"
  >
    <div>
      <h1
        class="mb-0"
      >
        Transaction Sent
      </h1>
      <div
        class="grid grid-flow-row gap-2"
      >
        <div
          class="w-full my-10"
        >
          <svg
            class="w-full"
          >
            transaction_successful.svg
          </svg>
        </div>
        <p
          class="mb-4 text-theme-neutral-dark"
        >
          Your transaction was successfully sent. Please monitor the blockchain to ensure your transaction is confirmed and processed. The following is relevant information for your transaction:
        </p>
        <div
          class="flex items-center py-6 true "
          data-testid="TransactionDetail"
        >
          <div
            class="flex-1 space-y-2"
          >
            <div
              class="text-sm font-semibold text-theme-neutral"
            >
              ID
            </div>
            <div
              class="font-semibold"
            >
              <div
                class="flex items-center"
              >
                <div
                  class="inline-block truncate align-middle"
                >
                  <span
                    class="sc-fzpans kkFAbe text-theme-primary font-semibold text-base"
                    data-testid="address__wallet-address"
                  >
                    1e9b975eff66a7…6db3d69131067e
                  </span>
                </div>
                <span
                  class="ml-5"
                >
                  <div
                    class="inline-block cursor-pointer"
                    data-testid="clipboard__wrapper"
                  >
                    <div
                      class="text-theme-primary-300"
                    >
                      <div
                        class="sc-AxiKw dzBdqj"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          copy.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
          data-testid="TransactionDetail"
        >
          <div
            class="flex-1 space-y-2"
          >
            <div
              class="text-sm font-semibold text-theme-neutral"
            >
              Network
            </div>
            <div
              class="font-semibold"
            >
              undefined undefined
            </div>
          </div>
          <div
            class="ml-1 text-theme-danger"
          >
            <div
              class="sc-AxgMl eqWWwc bg-theme-background border-theme-danger-light"
            />
          </div>
        </div>
        <div
          class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
          data-testid="TransactionDetail"
        >
          <div
            class="flex-1 space-y-2"
          >
            <div
              class="font-semibold"
            >
              <div
                class="mb-2 text-sm font-semibold text-theme-neutral"
              >
                <span
                  class="mr-1"
                >
                  Sender
                </span>
                <div
                  class="sc-fzoLsD jBzTcb"
                  color="warning"
                >
                  <span
                    class="text-sm"
                  >
                    Your address
                  </span>
                </div>
              </div>
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="sc-fzpans kkFAbe text-theme-text font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  D5sRKW…cvJtwb
                </span>
              </div>
            </div>
          </div>
          <div
            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
            data-testid="Avatar"
          >
            <div
              class="w-full h-full"
            >
              <img
                alt="AUexKjGtgsSpVzPLs6jNMM6vJ6znEVTQWK"
                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(255, 87, 34)\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"60\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"50\\" fill=\\"rgb(63, 81, 181)\\"/></svg>"
                title="AUexKjGtgsSpVzPLs6jNMM6vJ6znEVTQWK"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`SendIpfs should show an error if an invalid IPFS hash is entered 1`] = `
<div>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzpjYC coERBU"
    >
      <div
        class="px-4 sm:px-6 lg:px-10"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="sc-fznxsB gUNIFm"
            >
              <svg
                width="40"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex h-20 mr-auto md:h-24"
          >
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="overflow-hidden rounded-lg"
              >
                <button
                  class="sc-AxjAm goVygI text-theme-primary-300 hover:text-theme-primary-700 hover:bg-theme-primary-50"
                  color="primary"
                  data-testid="navbar__buttons--notifications"
                  type="button"
                >
                  <div
                    class="sc-AxiKw fFXzuz p-1"
                    height="22"
                    width="22"
                  >
                    <svg>
                      notification.svg
                    </svg>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxjAm goVygI text-theme-primary-300 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--send"
                type="button"
              >
                <div
                  class="sc-AxiKw fFXzuz p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxjAm goVygI text-theme-primary-300 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="sc-AxiKw fFXzuz p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    receive.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 mr-4"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-medium text-theme-neutral"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-neutral-dark"
              >
                <span
                  data-testid="Amount"
                >
                  91.43089801 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="ml-4 cursor-pointer"
                data-testid="navbar__useractions"
              >
                <div
                  class="sc-AxgMl eqWWwc -mr-2 border-theme-primary-contrast"
                >
                  <span
                    class="text-theme-neutral-dark"
                  >
                    <div
                      class="sc-AxiKw dzBdqj"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        btc.svg
                      </svg>
                    </div>
                  </span>
                </div>
                <div
                  class="relative inline-flex items-center justify-center align-middle rounded-full"
                  data-testid="navbar__user--avatar"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background"
                    >
                      JO
                    </span>
                  </div>
                  <span
                    class="sc-AxhUy kTPsmA flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                  >
                    <div
                      class="sc-AxiKw ksjdLL"
                      height="10"
                      width="10"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                    <span />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex items-center space-x-2 container py-5 mx-auto font-semibold px-14 text-theme-neutral-dark"
      data-testid="breadcrumbs__wrapper"
    >
      <div
        class="sc-AxiKw bGpsrC"
        height="10"
        width="19"
      >
        <svg>
          arrow-back.svg
        </svg>
      </div>
      <div
        class="space-x-2"
      >
        <a
          class="text-theme-neutral-dark"
          href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
        >
          <span>
            Go back to Portfolio
          </span>
        </a>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 "
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 bryymu flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <form
            class="max-w-xl mx-auto"
            data-testid="Form"
          >
            <div>
              <ul
                class="sc-fznWqX bcUgwz"
              >
                <li
                  class="sc-fznJRM fanqcP"
                />
                <li
                  class="sc-fznJRM fiwUGS"
                />
                <li
                  class="sc-fznJRM fiwUGS"
                />
                <li
                  class="sc-fznJRM fiwUGS"
                />
              </ul>
              <div
                class="mt-8"
              >
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <section
                    data-testid="SendIpfs__step--first"
                  >
                    <div>
                      <h1
                        class="mb-0"
                      >
                        IPFS
                      </h1>
                      <div
                        class="text-theme-neutral-dark"
                      >
                        Store an IPFS hash on the network.
                      </div>
                    </div>
                    <div
                      class="mt-8"
                    >
                      <div
                        class="space-y-8 SendTransactionForm"
                      >
                        <fieldset
                          class="sc-AxirZ izhStr relative"
                        >
                          <div
                            class="mb-2"
                          >
                            <label
                              class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-dark"
                              data-testid="FormLabel"
                              for="network"
                            >
                              Network
                              <div
                                class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                                data-testid="FormLabel__required"
                              />
                            </label>
                          </div>
                          <div
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="SendTransactionForm__network-menu"
                            data-testid="SelectNetwork"
                            role="combobox"
                          >
                            <label
                              for="SendTransactionForm__network-input"
                              id="SendTransactionForm__network-label"
                            />
                            <div
                              class="sc-fzqNJr gmzgI"
                              data-testid="SelectNetworkInput"
                            >
                              <div
                                class="sc-fznZeY sc-fzokOt jWugcU px-4"
                              >
                                <div
                                  aria-label="ARK Devnet"
                                  class="sc-AxgMl eLFBRi border-theme-primary-100 text-theme-primary-400"
                                  data-testid="SelectNetworkInput__network"
                                >
                                  <div
                                    class="sc-AxiKw dklFyP"
                                    data-testid="NetworkIcon__icon"
                                    height="20"
                                    width="20"
                                  >
                                    <svg>
                                      ark.svg
                                    </svg>
                                  </div>
                                </div>
                              </div>
                              <span
                                class="sc-fznZeY dHxPUs py-3 font-normal border border-transparent opacity-50 pointer-events-none pl-15"
                                data-testid="SelectNetworkInput__typeahead"
                              >
                                ARK Devnet
                              </span>
                              <input
                                aria-autocomplete="list"
                                aria-controls="SendTransactionForm__network-menu"
                                aria-labelledby="SendTransactionForm__network-label"
                                autocomplete="off"
                                class="sc-fznKkj lbGKPD overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pl-15"
                                data-testid="SelectNetworkInput__input"
                                disabled=""
                                id="SendTransactionForm__network-input"
                                placeholder="Enter a network name"
                                value="ARK Devnet"
                              />
                            </div>
                          </div>
                          <ul
                            aria-labelledby="SendTransactionForm__network-label"
                            class="grid grid-cols-6 gap-6 mt-6"
                            id="SendTransactionForm__network-menu"
                            role="listbox"
                          >
                            <li
                              aria-selected="false"
                              class="inline-block cursor-pointer"
                              data-testid="SelectNetwork__NetworkIcon--container"
                              disabled=""
                              id="SendTransactionForm__network-item-0"
                              role="option"
                            >
                              <div
                                aria-label="ARK"
                                class="sc-AxgMl gOPxRO text-theme-neutral-light"
                                data-testid="NetworkIcon-ARK-ark.mainnet"
                              >
                                <div
                                  class="sc-AxiKw fubePL"
                                  data-testid="NetworkIcon__icon"
                                  height="26"
                                  width="26"
                                >
                                  <svg>
                                    ark.svg
                                  </svg>
                                </div>
                              </div>
                            </li>
                            <li
                              aria-selected="false"
                              class="inline-block cursor-pointer"
                              data-testid="SelectNetwork__NetworkIcon--container"
                              disabled=""
                              id="SendTransactionForm__network-item-1"
                              role="option"
                            >
                              <div
                                aria-label="ARK Devnet"
                                class="sc-AxgMl gOPxRO text-theme-success-500 border-theme-success-200"
                                data-testid="NetworkIcon-ARK-ark.devnet"
                              >
                                <div
                                  class="sc-AxiKw fubePL"
                                  data-testid="NetworkIcon__icon"
                                  height="26"
                                  width="26"
                                >
                                  <svg>
                                    ark.svg
                                  </svg>
                                </div>
                              </div>
                            </li>
                            <li
                              aria-selected="false"
                              class="inline-block cursor-pointer"
                              data-testid="SelectNetwork__NetworkIcon--container"
                              disabled=""
                              id="SendTransactionForm__network-item-2"
                              role="option"
                            >
                              <div
                                aria-label="Compendia"
                                class="sc-AxgMl gOPxRO text-theme-neutral-light"
                                data-testid="NetworkIcon-ARK-compendia.mainnet"
                              >
                                <div
                                  class="sc-AxiKw fubePL"
                                  data-testid="NetworkIcon__icon"
                                  height="26"
                                  width="26"
                                >
                                  <svg>
                                    bind.svg
                                  </svg>
                                </div>
                              </div>
                            </li>
                            <li
                              aria-selected="false"
                              class="inline-block cursor-pointer"
                              data-testid="SelectNetwork__NetworkIcon--container"
                              disabled=""
                              id="SendTransactionForm__network-item-3"
                              role="option"
                            >
                              <div
                                aria-label="Compendia Testnet"
                                class="sc-AxgMl gOPxRO text-theme-neutral-light"
                                data-testid="NetworkIcon-ARK-compendia.testnet"
                              >
                                <div
                                  class="sc-AxiKw fubePL"
                                  data-testid="NetworkIcon__icon"
                                  height="26"
                                  width="26"
                                >
                                  <svg>
                                    bind.svg
                                  </svg>
                                </div>
                              </div>
                            </li>
                          </ul>
                        </fieldset>
                        <fieldset
                          class="sc-AxirZ izhStr relative"
                        >
                          <div
                            class="mb-2"
                          >
                            <label
                              class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-dark"
                              data-testid="FormLabel"
                              for="senderAddress"
                            >
                              Sender
                              <div
                                class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                                data-testid="FormLabel__required"
                              />
                            </label>
                          </div>
                          <div
                            data-testid="sender-address"
                          >
                            <div>
                              <button
                                class="sc-fzoyTs bPtMIB SelectAddress  "
                                data-testid="SelectAddress__wrapper"
                                type="button"
                              >
                                <div
                                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 bXyrQO mx-4"
                                  data-testid="Avatar"
                                >
                                  <div
                                    class="w-full h-full"
                                  >
                                    <img
                                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                                    />
                                  </div>
                                </div>
                                <div
                                  class="inline-block truncate align-middle"
                                >
                                  <span
                                    class="sc-fzpans kkFAbe text-theme-text font-semibold text-base"
                                    data-testid="address__wallet-address"
                                  >
                                    D8rr7B1d6TL6p…sKp1VBMs6YUYD
                                  </span>
                                </div>
                                <div
                                  class="absolute flex items-center space-x-3 right-4"
                                >
                                  <div
                                    class="sc-AxiKw dklFyP"
                                    height="20"
                                    width="20"
                                  >
                                    <svg>
                                      user.svg
                                    </svg>
                                  </div>
                                </div>
                              </button>
                              <input
                                class="sc-fznKkj lbGKPD overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 hidden"
                                data-testid="SelectAddress__input"
                                name="senderAddress"
                                readonly=""
                                type="text"
                                value="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                              />
                            </div>
                          </div>
                        </fieldset>
                        <fieldset
                          class="sc-AxirZ kMHTdH relative mt-1"
                        >
                          <div
                            class="mb-2"
                          >
                            <label
                              class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-dark"
                              data-testid="FormLabel"
                              for="hash"
                            >
                              IPFS Hash
                              <div
                                class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                                data-testid="FormLabel__required"
                              />
                            </label>
                          </div>
                          <div
                            class="sc-fzqNJr gmzgI"
                          >
                            <input
                              aria-invalid="true"
                              class="sc-fznKkj lbGKPD overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pr-20"
                              data-testid="Input__hash"
                              name="hash"
                              placeholder=" "
                              type="text"
                              value="invalid-ipfs-hash"
                            />
                          </div>
                          <p
                            class="text-sm text-theme-danger"
                          >
                            The IPFS hash is not valid
                          </p>
                        </fieldset>
                        <fieldset
                          class="sc-AxirZ izhStr flex flex-col space-y-2"
                        >
                          <label
                            class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-dark"
                            data-testid="FormLabel"
                            for="fee"
                          >
                            Transaction Fee
                            <div
                              class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                              data-testid="FormLabel__required"
                            />
                          </label>
                          <div
                            class="flex space-x-2"
                            data-testid="InputFee"
                          >
                            <div
                              class="flex-1"
                            >
                              <div
                                class="sc-fzqNJr gmzgI"
                              >
                                <input
                                  class="sc-fznKkj lbGKPD overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 "
                                  data-testid="InputCurrency"
                                  name="fee"
                                  type="text"
                                  value="0.71538139"
                                />
                                <div
                                  class="absolute bottom-0 w-full px-1"
                                >
                                  <div
                                    class="flex flex-wrap justify-center"
                                    data-testid="Range"
                                  >
                                    <div
                                      class="sc-fzoyAV cgfxbu"
                                      data-testid="Range__track"
                                      style="transform: scale(1); cursor: pointer;"
                                    >
                                      <div
                                        class="sc-fzoLag kxUFqT"
                                        data-testid="Range__track__filled"
                                      >
                                        <div
                                          aria-valuemax="6.63"
                                          aria-valuemin="0.00357"
                                          aria-valuenow="0.71538139"
                                          class="sc-fzoXzr eykVSb"
                                          data-testid="Range__thumb"
                                          draggable="false"
                                          role="slider"
                                          style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                                          tabindex="0"
                                        />
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div>
                              <div
                                class="inline-flex items-center flex-shrink-0 overflow-hidden border rounded border-theme-neutral-300"
                                data-testid="SelectionBar"
                                role="radiogroup"
                              >
                                <button
                                  aria-checked="true"
                                  class="sc-fzoNJl gCmvhq relative px-5 transition-colors duration-300 border-transparent focus:outline-none border-b-3"
                                  data-testid="SelectionBarOption"
                                  role="radio"
                                  type="button"
                                >
                                  Min
                                </button>
                                <button
                                  aria-checked="true"
                                  class="sc-fzoNJl gCmvhq relative px-5 transition-colors duration-300 border-transparent focus:outline-none border-b-3"
                                  data-testid="SelectionBarOption"
                                  role="radio"
                                  type="button"
                                >
                                  Average
                                </button>
                                <button
                                  aria-checked="true"
                                  class="sc-fzoNJl gCmvhq relative px-5 transition-colors duration-300 border-transparent focus:outline-none border-b-3"
                                  data-testid="SelectionBarOption"
                                  role="radio"
                                  type="button"
                                >
                                  Max
                                </button>
                              </div>
                            </div>
                          </div>
                        </fieldset>
                      </div>
                    </div>
                  </section>
                </div>
                <div
                  class="flex justify-end mt-10 space-x-2"
                >
                  <button
                    class="sc-AxjAm fPpool"
                    color="primary"
                    data-testid="SendIpfs__button--back"
                    disabled=""
                    type="button"
                  >
                    Back
                  </button>
                  <button
                    class="sc-AxjAm kbZyZT"
                    color="primary"
                    data-testid="SendIpfs__button--continue"
                    disabled=""
                    type="button"
                  >
                    Continue
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
